--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,7 +1,7 @@
 .header {
-  min-width: 604px; /*Prevents the links from falling off background when it is reduced*/
-  width: auto;
-  height: 80px;
+  /*Prevents the links from falling off background when it is reduced*/
+  min-width: 604px;
+  padding: 8px;
   font-family: monospace;
   background: papayawhip;
   display: flex;
@@ -14,17 +14,18 @@
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 2px 30px;
    /*No space between logo when reduced*/
-  margin: 0px -20px 0px -15px;
-  justify-content: center;
+   padding: 4px 34px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  margin: 0px 10px 0px -34px;
+  margin: 0;
+  padding: 0;
+  /*Left/Right space between links*/
+  gap: 8px;
 }
 
 a {
@@ -33,7 +34,6 @@ a {
   padding: 8px;
   /* this removes the line under the links */
     text-decoration: none;
-  /*Left/Right space between links*/
-  margin: 0px 4px;
+
 }
 
