--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,6 +1,6 @@
 /* this is some magical font-importing.  
 you'll learn about it later. */
-@import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap");
 
 body {
   margin: 0;
@@ -11,12 +11,34 @@ body {
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
-  box-shadow: 0 0 8px rgba(0,0,0,.1);
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+  /*Changes*/
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+/*Style Left Container*/
+.left-header-container {
+  display: flex;
+  align-items: center;
+  margin: 0px;
+  gap: 16px;
+  
+}
+
+/*Style Right Container*/
+.right-header-container {
+  display: flex;  
+  align-items: center;
+  margin: 0px;
+  gap: 16px;
+  
 }
 
 .profile-image {
   background: rebeccapurple;
-  box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
+  box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
@@ -27,6 +49,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+ 
 }
 
 button {
@@ -35,14 +58,22 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+
 }
 
 a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+ 
 }
 
 ul {
+  display: flex;
   list-style-type: none;
+  /*Remove Default Margin & Padding on ul*/
+  margin: 0px;
+  padding: 0px;
+  gap: 16px;
+
 }
